--- a/design.ui
+++ b/design.ui
@@ -149,6 +149,7 @@
     </widget>
     <addaction name="menu_5"/>
     <addaction name="menu_6"/>
+    <addaction name="stats"/>
    </widget>
    <widget class="QMenu" name="menu_3">
     <property name="title">
@@ -260,6 +261,11 @@
   <action name="superpos">
    <property name="text">
     <string>Суперпозиция</string>
+   </property>
+  </action>
+  <action name="stats">
+   <property name="text">
+    <string>Статистики</string>
    </property>
   </action>
  </widget>
