--- a/design/design.ui
+++ b/design/design.ui
@@ -150,6 +150,7 @@
     <addaction name="menu_5"/>
     <addaction name="menu_6"/>
     <addaction name="stats"/>
+    <addaction name="spectr"/>
    </widget>
    <widget class="QMenu" name="menu_3">
     <property name="title">
@@ -266,6 +267,11 @@
   <action name="stats">
    <property name="text">
     <string>Статистики</string>
+   </property>
+  </action>
+  <action name="spectr">
+   <property name="text">
+    <string>Спектральный анализ</string>
    </property>
   </action>
  </widget>
