--- a/design/design.ui
+++ b/design/design.ui
@@ -163,6 +163,7 @@
      <string>Справка</string>
     </property>
     <addaction name="Info"/>
+    <addaction name="test_button"/>
    </widget>
    <addaction name="menu123"/>
    <addaction name="menu"/>
@@ -278,6 +279,11 @@
   <action name="spectrogramm">
    <property name="text">
     <string>Спектрограмма</string>
+   </property>
+  </action>
+  <action name="test_button">
+   <property name="text">
+    <string>тест</string>
    </property>
   </action>
  </widget>
